<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="@dimen/margem_16">

    <TextView
        android:id="@+id/tvMsgTabuada"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/msg_vamos_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etValorTabuada"
        android:layout_margin="@dimen/margem_16"/>

    <EditText
        android:id="@+id/etValorTabuada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/digite_valor"
        android:textSize="@dimen/fonte_12"
        app:layout_constraintTop_toBottomOf="@id/tvMsgTabuada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCalcular"
        android:layout_margin="@dimen/margem_16" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular_tabuada"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/etValorTabuada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/margem_16"/>

</androidx.constraintlayout.widget.ConstraintLayout>